NetworkSocketChannel should delay sending back error message as done by NetworkSocketStream https://bugs.webkit.org/show_bug.cgi?id=215563

Reviewed by Alex Christensen.

Apply same policy as NetworkSocketStream in case of WebSocket connection error.
Covered by http/tests/websocket/tests/hybi/closed-port-delay.html with NSURLSession WebSocket code path.

* NetworkProcess/NetworkSocketChannel.cpp:
(WebKit::NetworkSocketChannel::NetworkSocketChannel):
(WebKit::NetworkSocketChannel::didClose):
(WebKit::NetworkSocketChannel::didReceiveMessageError):
(WebKit::NetworkSocketChannel::sendDelayedError):
* NetworkProcess/NetworkSocketChannel.h:


Canonical link: https://commits.webkit.org/228364@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265814 268f45cc-cd09-0410-ab3c-d52691b4dbfc